Customization how it works section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="style/text.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/home.css">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -187,15 +189,15 @@
     <section class="subscribe" id="subscribe">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-5">
                     <span class="subscribe__span">
                         First ever engineering club
                     </span>
                     <h2 class="subscribe__title">
-                        Ids at your door step mep consulting service clu
+                        Ids at your door step mep consulting service club
                     </h2>
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                     <div class="subscribe__banner">
                         <img src="img/subscribe.svg" alt="subscribe image">
                         <span class="subscribe__banner-span">
@@ -215,7 +217,7 @@
     <section class="company-aims">
         <div class="container">
             <h1 class="section-title" id="company-aims">
-                What ids do?
+                What <span>ids</span> do?
             </h1>
             <div class="row big-letters__row">
                 <div class="col-4 big-letters__row-block">
@@ -290,28 +292,31 @@
 
     <!-- HOW IT WORKS SECTION -->
 
-    <section class="how-it-works" id="how-it-works">
+    <section class="how-it-works pt-5">
         <div class="container">
+            <div class="section-title" id="how-it-works">
+                How it <span>works</span>?
+            </div>
             <div class="row how-it-works__row">
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/corporate.svg" alt="How it works image">
                     </div>
                     <p>Choose corporate or individual</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/map.svg" alt="How it works image">
                     </div>
                     <p>Choose location</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/architecture-and-city.svg" alt="How it works image">
                     </div>
                     <p>Choose property type</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/construction.svg" alt="How it works image">
                     </div>
@@ -320,25 +325,25 @@
 
                 <!-- Second Row -->
 
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/contract.svg" alt="How it works image">
                     </div>
                     <p>Choose the requirement</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/email-maketing.svg" alt="How it works image">
                     </div>
                     <p>Choose required feedback</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/page-1.svg" alt="How it works image">
                     </div>
                     <p>Choose subscription duration</p>
                 </div>
-                <div class="col-4 how-it-works__row-block">
+                <div class="col-3 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/surface-1.svg" alt="How it works image">
                     </div>
