--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="style/home.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/inputs.css">
+    <link rel="stylesheet" href="style/media-queries.css">
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
 </head>
@@ -80,18 +81,10 @@
                 systems for better healthy living, more efficient, more economic, smart green environment for life.
             </p>
             <div class="who-we-are__img-container">
-                <div class="who-we-are__img-container__block">
-                    <img src="img/alain-pham-p-qvs-f-7-yodw-unsplash.png" alt="who we are image">
-                </div>
-                <div class="who-we-are__img-container__block">
-                    <img src="img/jeshoots-com-dp-libj-av-2-r-8-unsplash.png" alt="who we are image">
-                </div>
-                <div class="who-we-are__img-container__block">
-                    <img src="img/christopher-burns-wiu-3-w-99-t-ng-unsplash.png" alt="who we are image">
-                </div>
-                <div class="who-we-are__img-container__block">
-                    <img src="img/american-public-power-association-f-h-ld-xf-ur-dh-a-unsplash.png" alt="who we are image">
-                </div>
+                <img src="img/alain-pham-p-qvs-f-7-yodw-unsplash.png" alt="who we are image">
+                <img src="img/jeshoots-com-dp-libj-av-2-r-8-unsplash.png" alt="who we are image">
+                <img src="img/christopher-burns-wiu-3-w-99-t-ng-unsplash.png" alt="who we are image">
+                <img src="img/american-public-power-association-f-h-ld-xf-ur-dh-a-unsplash.png" alt="who we are image">
             </div>
     </section>
 
@@ -100,7 +93,7 @@
     <section class="masonry-gallery" id="masonry-gallery">
         <div class="container">
             <div class="row">
-                <div class="col-4 masonry-gallery__col">
+                <div class="col-md-4 col-6 masonry-gallery__col">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Vision
                     </h3>
@@ -111,7 +104,7 @@
                     </p>
                     <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
                 </div>
-                <div class="col-4 masonry-gallery__col">
+                <div class="col-md-4 col-6 masonry-gallery__col">
                     <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Participate
@@ -123,7 +116,7 @@
                         applications
                     </p>
                 </div>
-                <div class="col-4 masonry-gallery__col">
+                <div class="col-md-4 col-6 masonry-gallery__col">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Exprience
                     </h3>
@@ -191,7 +184,7 @@
     <section class="subscribe" id="subscribe">
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-md-5 col-12">
                     <span class="subscribe__span">
                         First ever engineering club
                     </span>
@@ -199,7 +192,7 @@
                         Ids at your door step mep consulting service club
                     </h2>
                 </div>
-                <div class="col-7">
+                <div class="col-md-7 col-12">
                     <div class="subscribe__banner">
                         <img src="img/subscribe.svg" alt="subscribe image">
                         <span class="subscribe__banner-span">
@@ -222,7 +215,7 @@
                 What <span>ids</span> do?
             </h1>
             <div class="row big-letters__row">
-                <div class="col-4 big-letters__row-block">
+                <div class="col-md-4 col-12 big-letters__row-block">
                     <span>M</span>
                     <p>
                         For mechanical 
@@ -230,7 +223,7 @@
                         smoke extraction, firefighting)
                     </p>
                 </div>
-                <div class="col-4 big-letters__row-block">
+                <div class="col-md-4 col-12 big-letters__row-block">
                     <span>E</span>
                     <p>
                         For electrical, light current 
@@ -238,7 +231,7 @@
                         controls
                     </p>
                 </div>
-                <div class="col-4 big-letters__row-block">
+                <div class="col-md-4 col-12 big-letters__row-block">
                     <span>P</span>
                     <p>
                         For plumbing uses pipes, 
@@ -300,25 +293,25 @@
                 How it <span>works</span>?
             </div>
             <div class="row how-it-works__row">
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/corporate.svg" alt="How it works image">
                     </div>
                     <p>Choose corporate or individual</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/map.svg" alt="How it works image">
                     </div>
                     <p>Choose location</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/architecture-and-city.svg" alt="How it works image">
                     </div>
                     <p>Choose property type</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/construction.svg" alt="How it works image">
                     </div>
@@ -327,25 +320,25 @@
 
                 <!-- Second Row -->
 
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/contract.svg" alt="How it works image">
                     </div>
                     <p>Choose the requirement</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/email-maketing.svg" alt="How it works image">
                     </div>
                     <p>Choose required feedback</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/page-1.svg" alt="How it works image">
                     </div>
                     <p>Choose subscription duration</p>
                 </div>
-                <div class="col-3 how-it-works__row-block">
+                <div class="col-md-3 col-sm-4 col-6 active">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/surface-1.svg" alt="How it works image">
                     </div>
@@ -425,7 +418,7 @@
     <footer class="footer contact-us">
         <div class="container">
             <div class="row">
-                <div class="col-6 contact-us__form-col">
+                <div class="col-sm-6 col-12 contact-us__form-col">
                     <h1 class="section-title" id='contact-us'>
                         Contact <span>Us</span>
                     </h1>
@@ -458,7 +451,7 @@
                         Copy Rights TWINSOFT 2020, All Rights Reserved
                     </p>
                 </div>
-                <div class="col-6 contact-us__info-col">
+                <div class="col-sm-6 col-12 contact-us__info-col">
                     <a class="contact-us__block" href='tel:+96789095432'>
                         <img src="img/phone-call.svg" alt="Contact Us Phone Number">
                         <p class='pt-4'>Mobile Number</p>
