--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </div>
                     <p>Choose subscription duration</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 active">
+                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/surface-1.svg" alt="How it works image">
                     </div>
