--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             <h1 class="section-title" id="services">
                 <span>IDS</span> Services
             </h1>
+        </div>
+        <div class="services__container">
             <div class="services-slider">
                 <div class="services-slider__block">
                     <img src="img/max-rovensky-n-2-o-ybg-sc-dq-unsplash.png" alt="Services slider image">
