--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 What <span>ids</span> do?
             </h1>
             <div class="row big-letters__row">
-                <div class="col-md-4 col-12 big-letters__row-block">
+                <div class="col-lg-4 col-12 big-letters__row-block">
                     <span>M</span>
                     <p>
                         For mechanical 
@@ -225,7 +225,7 @@
                         smoke extraction, firefighting)
                     </p>
                 </div>
-                <div class="col-md-4 col-12 big-letters__row-block">
+                <div class="col-lg-4 col-12 big-letters__row-block">
                     <span>E</span>
                     <p>
                         For electrical, light current 
@@ -233,7 +233,7 @@
                         controls
                     </p>
                 </div>
-                <div class="col-md-4 col-12 big-letters__row-block">
+                <div class="col-lg-4 col-12 big-letters__row-block">
                     <span>P</span>
                     <p>
                         For plumbing uses pipes, 
@@ -295,25 +295,25 @@
                 How it <span>works</span>?
             </div>
             <div class="row how-it-works__row">
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/corporate.svg" alt="How it works image">
                     </div>
                     <p>Choose corporate or individual</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/map.svg" alt="How it works image">
                     </div>
                     <p>Choose location</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/architecture-and-city.svg" alt="How it works image">
                     </div>
                     <p>Choose property type</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/construction.svg" alt="How it works image">
                     </div>
@@ -322,25 +322,25 @@
 
                 <!-- Second Row -->
 
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/contract.svg" alt="How it works image">
                     </div>
                     <p>Choose the requirement</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/email-maketing.svg" alt="How it works image">
                     </div>
                     <p>Choose required feedback</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/page-1.svg" alt="How it works image">
                     </div>
                     <p>Choose subscription duration</p>
                 </div>
-                <div class="col-md-3 col-sm-4 col-6 how-it-works__row-block">
+                <div class="col-md-3 col-6 how-it-works__row-block">
                     <div class="how-it-works__row-block__img-container">
                         <img src="img/surface-1.svg" alt="How it works image">
                     </div>
