--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <!--  -->
-            <div class="row services__row">
+            <div class="services__row">
                 <div class="col-3">
                     Full mep systems
                 </div>
