--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                         </ul>
                     </nav>
                     <div class="col-lg-3 col-md-2 col-4 pr-5 top-bar__row-col__auth">
-                        <button class="sign-in-btn">
+                        <a href='sign-in.html' class="sign-in-btn">
                             Sign In
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <button class="burger-menu">
@@ -233,7 +233,7 @@
                         <span class="subscribe__banner-span">
                             Join Now
                         </span>
-                        <button class="subscribe-btn">
+                        <button class="main-btn subscribe-btn">
                             Subscribe
                         </button>
                     </div>
@@ -478,7 +478,7 @@
                             Message
                             <textarea name="message" rows="6" required></textarea>
                         </label>
-                        <button class="contact-us-btn">
+                        <button class="contact-us-btn main-btn">
                             Contact us
                         </button>
                     </form>
