--- a/sign-in.html
+++ b/sign-in.html
@@ -76,7 +76,7 @@
 
     <!-- AUTH MAIN -->
 
-    <main class='auth-main'>
+    <main class='auth-main sign-in-main'>
         <div class="container">
             <div class="auth-main__row row">
                 <div class="auth-main__row__left-col col-sm-7 col-12">
