--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
     <script src='scripts/home.js'></script>
     <script src='scripts/slider.js'></script>
     <script src='scripts/smooth-scroll.js'></script>
+    <script src='scripts/select.js'></script>  
     <script src='scripts/menu.js'></script>
 </body>
 </html>
